--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>my-website-opps</title>
 </head>
 <body>
-    
+    <p>
+        je ne sais pas quoi écrire ici...
+    </p>
 </body>
 </html>
